Fixed with and alignment of score box when used inside an iframe.

--- a/cms/server/contest/static/cws_style.css
+++ b/cms/server/contest/static/cws_style.css
@@ -417,6 +417,11 @@ td.token_rules p:last-child {
     display: flex;
     justify-content: space-evenly;
     font-weight: bold;
+    text-align: center;
+}
+
+#task_score_public {
+    width: 100%;
 }
 
 .task_score {
